# econ_workflow

./: .gitignore  README.md  flake.nix  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: _quarto.yml  index.qmd  presentation.qmd
home/: u.nix
infra/proxmox-lab/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
inventory/: README.md  proxmox_inventory.template.toml  proxmox_inventory.toml
logic/: export_scxml.ts  mems_machine.ts
logic/tests/: coverage.test.ts
scripts/: validate_inventory.py
simulation/: __init__.py
simulation/hil/: __init__.py  modbus_bridge.py  orchestrator.py
simulation/profiler/: __init__.py  load.py  solar.py
tests/: test_hil.py  test_profiler.py
verification/formal/: README.md
