[project]
name = "econ-workflow"
version = "0.1.0"
description = "Front 1: MEMS Infrastructure for IEEE 2030.7-2017"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pvlib>=0.11.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "pymodbus>=3.6.0",
    "mosaik>=3.3.0",
    "pymgrid>=0.1.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["simulation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
